# pffmpeg

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  objects.inv  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-tests.txt  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  release.yml  tests.yml
changelog/: index.html
development/contributing/: index.html
docs/: mkdocs.yml
docs/src/: index.md  installation.md  license.md  reference.md  usage.md
docs/src/assets/css/: extra.css
docs/src/getting-started/: installation.md
installation/: index.html
license/: index.html
reference/: index.html
scripts/: get_latest_release_notes.py  update_latest_tag_msg.sh
search/: search_index.json
src/pffmpeg/: __init__.py  __main__.py  _args.py  _cli.py  _runner.py  _utils.py
tests/: test_e2e.py  test_package.py
tests/data/: README.md
tests/integration/: test_cli.py
tests/unit/: test_runner.py
usage/: index.html
